--- a/htmlFiles/index.html
+++ b/htmlFiles/index.html
@@ -23,18 +23,18 @@
 
       <!-- Neue Sportart -->
       <button id="openAddSportBtn" class="btn btn-ghost" type="button">
-        Sportart hinzufuegen
+        Sportart hinzufügen
       </button>
 
       <!-- Neuer Spieler -->
       <button id="openAddPlayerBtn" class="btn btn-primary" type="button">
-        Spieler hinzufuegen
+        Spieler hinzufügen
       </button>
     </div>
   </header>
 
   <!-- Tabs -->
-  <!-- WICHTIG: Sport Tabs werden in JS dynamisch eingefuegt -->
+  <!-- WICHTIG: Sport Tabs werden in JS dynamisch eingefügt -->
   <nav id="tabbar" class="tabbar" aria-label="Seiten Tabs">
     <button class="tab active" data-target="start" type="button">Start</button>
     <!-- Sport Tabs kommen hier rein -->
@@ -49,7 +49,7 @@
           <h1 class="hero-title">KANTISPORTS HUB</h1>
           <p class="hero-subtitle">
             Spielerprofile pro Sportart. Sortieren nach Name oder Stats. Overall Rating pro Spieler.
-            Vergleichmodus fuer zwei Spieler derselben Sportart.
+            Vergleichmodus für zwei Spieler derselben Sportart.
             AOTK nutzt nur allgemeine Stats und zeigt AOTK Students, AOTK Teacher und Gesamt AOTK.
           </p>
 
@@ -78,13 +78,13 @@
           <div class="hero-card">
             <div class="hero-card-title">So nutzt du die Plattform</div>
             <ol class="steps">
-              <li>Sportart waehlen und Spieler sortieren.</li>
+              <li>Sportart wählen und Spieler sortieren.</li>
               <li>Hover: Schnellinfos. Klick: Detailansicht.</li>
-              <li>Vergleichmodus aktivieren und zwei Spieler waehlen.</li>
+              <li>Vergleichmodus aktivieren und zwei Spieler wählen.</li>
               <li>AOTK: Teacher, Students, Gesamt basierend nur auf allgemeinen Stats.</li>
             </ol>
             <div class="note">
-              Tipp: Du kannst Sportarten und Spieler hinzufuegen. Die Webseite berechnet alles neu.
+              Tipp: Du kannst Sportarten und Spieler hinzufügen. Die Webseite berechnet alles neu.
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
         </article>
         <article class="feature">
           <div class="feature-title">Rollen</div>
-          <div class="feature-text">Spieler ist Schueler oder Lehrer. AOTK wird getrennt und insgesamt berechnet.</div>
+          <div class="feature-text">Spieler ist Schüler oder Lehrer. AOTK wird getrennt und insgesamt berechnet.</div>
         </article>
         <article class="feature">
           <div class="feature-title">Overall Sportseite</div>
@@ -105,7 +105,7 @@
         </article>
         <article class="feature">
           <div class="feature-title">AOTK</div>
-          <div class="feature-text">AOTK nutzt nur allgemeine Stats wie pace, physic, jump, endurance, coordination.</div>
+          <div class="feature-text">AOTK verwendet nur allgemeine Werte wie Tempo, Körperbau, Sprungkraft, Ausdauer und Koordination.</div>
         </article>
       </div>
     </section>
@@ -122,17 +122,17 @@
 
       <div class="aotk-grid">
         <div class="aotk-box">
-          <h3>AOTK Students</h3>
+          <h3>SOTK (Student of the Kanti)</h3>
           <div id="aotkStudentsPanel" class="aotk-panel"></div>
         </div>
 
         <div class="aotk-box">
-          <h3>AOTK Teacher</h3>
+          <h3>TOTK (Teacher of the Kanti)</h3>
           <div id="aotkTeacherPanel" class="aotk-panel"></div>
         </div>
 
         <div class="aotk-box">
-          <h3>AOTK Gesamt</h3>
+          <h3>AOTK (Athlete of the Kanti)</h3>
           <div id="aotkOverallPanel" class="aotk-panel"></div>
         </div>
       </div>
@@ -171,14 +171,14 @@
   <div id="addPlayerModal" class="modal d-none">
     <div class="modal-card">
       <div class="modal-head">
-        <div class="modal-title">Spieler hinzufuegen</div>
+        <div class="modal-title">Spieler hinzufügen</div>
         <button id="closeAddPlayerBtn" class="btn btn-ghost" type="button">Schliessen</button>
       </div>
 
       <div class="form">
         <label class="label">Rolle</label>
         <select id="newRole" class="input">
-          <option value="student">Schueler</option>
+          <option value="student">Schüler</option>
           <option value="teacher">Lehrer</option>
         </select>
 
@@ -213,7 +213,7 @@
   <div id="addSportModal" class="modal d-none">
     <div class="modal-card">
       <div class="modal-head">
-        <div class="modal-title">Sportart hinzufuegen</div>
+        <div class="modal-title">Sportart hinzufügen</div>
         <button id="closeAddSportBtn" class="btn btn-ghost" type="button">Schliessen</button>
       </div>
 
@@ -225,12 +225,12 @@
         <input id="sportKeyInput" class="input" type="text" placeholder="z.B. handball" />
 
         <p class="hint">
-          Stats fuer diese Sportart: Name + Gewicht. Gewichte muessen nicht perfekt sein, sie werden normalisiert.
+          Stats für diese Sportart: Name + Gewicht. Gewichte müssen nicht perfekt sein, sie werden normalisiert.
         </p>
 
         <div class="form-row">
-          <button id="addSportStatBtn" class="btn btn-ghost" type="button">Stat hinzufuegen</button>
-          <button id="resetSportStatBtn" class="btn btn-ghost" type="button">Stats zuruecksetzen</button>
+          <button id="addSportStatBtn" class="btn btn-ghost" type="button">Stat hinzufügen</button>
+          <button id="resetSportStatBtn" class="btn btn-ghost" type="button">Stats zurücksetzen</button>
         </div>
 
         <div id="sportStatDefFields" class="stat-fields"></div>
